# CSD2C-effect

./: .gitignore  CMakeLists.txt  README.md
docs/: Notes.md
source/: distortion.cpp  distortion.hpp  filterCoefficients.cpp  filterCoefficients.hpp  firFilter.cpp  firFilter.hpp  main.cpp  oscillator.cpp  oscillator.hpp
